# CMake_test

./: README.md
dylib/: CMakeLists.txt
dylib/src/: CMakeLists.txt
dylib/test/: CMakeLists.txt  main.cpp
slib/: CMakeLists.txt
slib/src/: CMakeLists.txt  sample.h
slib/test/: CMakeLists.txt  main.cpp
